ingress/kubernetes/list-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: go-listapp
spec:
  selector:
    app: go-listapp
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8000
