ingress/kubernetes/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: nginx
  name: nginx
spec:
  rules:
  - host: marcelk-lab.careertutor.de
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /
      - backend:
          serviceName: go-listapp
          servicePort: 80
        path: /ingress 
  tls:
  - hosts:
    - marcelk-lab.careertutor.de
    secretName: tls-marcelk-lab.careertutor.de
